--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -3,25 +3,25 @@
 \begin{multicols*}{2}
 % todo: use twocolumn article option
 
-% \input{12}
-% \input{13}
-% \input{14}
-% \input{1-11}
-% %
-% \input{16}
-% \input{17}
-% \input{18}
-% \input{15}
-% %
-% \input{20}
-% \input{63}
-% \input{64}
-% \input{19}
-% %
-% \input{92}
+\input{12}
+\input{13}
+\input{14}
+\input{1-11}
+%
+\input{16}
+\input{17}
+\input{18}
+\input{15}
+%
+\input{20}
+\input{63}
+\input{64}
+\input{19}
+%
+\input{92}
 \input{96}
-% \input{100}% {\def\side{R}\input{100}}
-% \input{102}%
+\input{100}% {\def\side{R}\input{100}}
+\input{102}%
 
 
 
