Use better? clearpage for pagebreak

--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -22,11 +22,10 @@
 \input{96}
 \input{100}% {\def\side{R}\input{100}}
 \input{102}%
-
-
-
-% \begin{samepage}
-\vspace{30pc}%force a blank page
-% \end{samepage}
+%
+\clearpage
+% \vspace{30pc}%force a blank page
+%
+%
 \end{multicols*}
 \end{document}
