Add integrals 21, 65, and 71.

--- a/102.tex
+++ b/102.tex
@@ -17,12 +17,12 @@ v = \ln u
 %
 \end{align*}
 
-
 \footeqn{\no}{
-\int{\frac{1}{u\ln u}}\;\dif{u}%
+\int{\frac{1}{u\ln{u}}}\;\dif{u}%
 \enspace=\enspace%
 \ln\abs{\ln{u}}\;+\;C%
 }
 %
 
 \end{samepage}
+\columnbreak%
