--- a/14.tex
+++ b/14.tex
@@ -18,6 +18,6 @@ I_{14}
   =& \ln \abs{\sec{u} + \tan{u}} + C
 \end{align*}
 
-\footeqn{14}{\int  \sec{u} \dif u = \ln \abs{\sec{u} + \tan{u}} + C }
+\footeqn{14}{\int\sec{u} \dif{u}= \ln\abs{\sec{u} + \tan{u}} + C }
 
 \end{samepage}
