--- a/63.tex
+++ b/63.tex
@@ -19,7 +19,7 @@
 
 \footeqn{\no}{
 \int\sin^2{u}\;\dif{u}
-\enspace=\enspace
+\enspace=\enspace%
 \tfrac{1}{2}\,{u}\;-\;\tfrac{1}{4}\,\sin{2{u}}\;+\;C
 }
 %
