--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -14,15 +14,22 @@
 \input{15}
 %
 \input{20}
-\input{63}
-\input{64}
+\input{21}
+\clearpage%
+This page is intentionally blank.\columnbreak%
 \input{19}
 %
-\input{92}
+\input{64}
+\input{65}
+\input{71}
+\input{63}
+%
 \input{96}
 \input{100}% {\def\side{R}\input{100}}
 \input{102}%
+\input{92}
 %
+
 \clearpage
 % \vspace{30pc}%force a blank page
 %
