--- a/64.tex
+++ b/64.tex
@@ -6,10 +6,10 @@
 % \renewcommand{\baselinestretch}{2}
 {I}_{\no}
 =&  \int  \cos^2{u} \dif u \\
-=&  \int  \frac{1+\cos{u}}{2} \dif u \\
-=&  \frac{1}{2}\cdot\int  1+\cos{u}  \dif u \\
+=&  \int  \frac{1+\cos{2u}}{2} \dif u \\
+=&  \frac{1}{2}\cdot\int  1+\cos{2u}  \dif u \\
 =&  \frac{1}{2}\cdot \left(
-      {u}+\frac{1}{2}\sin{u}
+      {u}+\frac{1}{2}\sin{2u}
     \right) + C \\
 =&  \tfrac{1}{2} {u}
    +\tfrac{1}{4} \sin{2{u}} + C
