Put pages on proper sides.

--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -21,13 +21,13 @@ This page is intentionally blank.\columnbreak%
 %
 \input{64}
 \input{65}
-\input{71}
+{\def\side{L}\input{71}}
 \input{63}
 %
 \input{96}
-\input{100}% {\def\side{R}\input{100}}
-\input{102}%
-\input{92}
+{\def\side{R}\input{100}}
+\input{102}
+{\def\side{R}\input{92}}
 %
 
 \clearpage
