Make booklet form a version, not the default

--- a/1-11.tex
+++ b/1-11.tex
@@ -1,4 +1,5 @@
-\begin{samepage}
+\def\no{I}
+\def\theintegral{These integrals can be used without explanation}
 \newcommand{\inum}[1]{\mathbf{#1.}\enspace}
 \newcommand{\s}[2][\footnotesize]{\mbox{#1\(\displaystyle{#2}\)}}
 \newcommand{\tint}{\s{\int}}
@@ -42,11 +43,3 @@
 % \sep\inum{11}  &\int  \csc u \cot u \dif u =  -\csc u + C
 % \end{aligned}
 % \end{gather*}
-\vspace*{2em}
-\centering
-\resizebox{0.75\columnwidth}{!}{
-These integrals can be used without explanation
-}%
-
-\end{samepage}
-\columnbreak%
