--- a/100.tex
+++ b/100.tex
@@ -1,5 +1,8 @@
-\begin{samepage}
 \def\no{100}
+\def\theintegral{\(\int{\ln{u}}\;\dif{u}
+\enspace=\enspace%
+u\ln{u}\;-\;u\;+\;C\)}
+
 \begin{align*}
 %
 {I}_{\no}
@@ -14,13 +17,3 @@
 =&  u \ln u - u + C
 %
 \end{align*}
-
-
-\footeqn{\no}{
-\int{\ln{u}}\;\dif{u}
-\enspace=\enspace%
-u\ln{u}\;-\;u\;+\;C
-}
-%
-
-\end{samepage}
