--- a/102.tex
+++ b/102.tex
@@ -1,5 +1,8 @@
-\begin{samepage}
 \def\no{102}
+\def\theintegral{\(\int{\frac{1}{u\ln{u}}}\;\dif{u}%
+\enspace=\enspace%
+\ln\abs{\ln{u}}\;+\;C\)}
+
 \begin{align*}
 %
 {I}_{\no}
@@ -16,13 +19,3 @@ v = \ln u
 =&  \ln\abs{\ln u}
 %
 \end{align*}
-
-\footeqn{\no}{
-\int{\frac{1}{u\ln{u}}}\;\dif{u}%
-\enspace=\enspace%
-\ln\abs{\ln{u}}\;+\;C%
-}
-%
-
-\end{samepage}
-\columnbreak%
