--- a/12.tex
+++ b/12.tex
@@ -1,4 +1,6 @@
-\begin{samepage}
+\def\no{12}
+\def\theintegral{\(\int\tan{u}\dif{u}=\ln\abs{\cos{u}} + C\)}
+
 \begin{align*}
 % \renewcommand{\baselinestretch}{2}
 I_{12}
@@ -13,7 +15,3 @@ I_{12}
 \nb\unsub
   =& - \ln \abs{\cos{u}} + C
 \end{align*}
-
-\footeqn{12}{   \int\tan{u}\dif{u}=\ln\abs{\cos{u}} + C   }
-
-\end{samepage}
