--- a/13.tex
+++ b/13.tex
@@ -1,4 +1,6 @@
-\begin{samepage}
+\def\no{13}
+\def\theintegral{\(\int\cot{u}\dif{u}=\ln\abs{\sin{u}} + C\)}
+
 \begin{align*}
 % \renewcommand{\baselinestretch}{2}
 I_{13}
@@ -10,7 +12,3 @@ I_{13}
 \nb\unsub
 =&  \ln \abs{\sin{u}} + C
 \end{align*}
-
-\footeqn{13}{   \int\cot{u}\dif{u}=\ln\abs{\sin{u}} + C   }
-
-\end{samepage}
