--- a/14.tex
+++ b/14.tex
@@ -1,4 +1,7 @@
-\begin{samepage}
+\def\no{14}
+\def\theintegral{\(
+\int  \sec u \dif u = \ln\abs{ \sec u + \tan u } + C
+\)}
 \begin{align*}
 % \renewcommand{\baselinestretch}{2}
 I_{14}
@@ -17,7 +20,3 @@ I_{14}
 \nb\unsub
   =& \ln \abs{\sec{u} + \tan{u}} + C
 \end{align*}
-
-\footeqn{14}{\int\sec{u} \dif{u}= \ln\abs{\sec{u} + \tan{u}} + C }
-
-\end{samepage}
