--- a/18.tex
+++ b/18.tex
@@ -1,5 +1,8 @@
-\begin{samepage}
 \def\no{18}
+\def\theintegral{\(\int{\frac{1}{u \sqrt{u^2-a^2}}}\;\dif{u}
+\enspace=\enspace%
+\frac{1}{a}\arcsec{\frac{u}{a}}\;+\;C\)}
+
 % \def\aroundarrows{\mspace{18mu}}
 % \def\andsoarrow{\Rightarrow}
 \begin{align*}
@@ -24,14 +27,3 @@
     ]
 =&  \frac{1}{a}\arcsec{\frac{u}{a}} + C
 \end{align*}
-
-
-
-\footeqn{\no}{
-\int{\frac{1}{u \sqrt{u^2-a^2}}}\;\dif{u}
-\enspace=\enspace%
-\frac{1}{a}\arcsec{\frac{u}{a}}\;+\;C
-}
-%
-
-\end{samepage}
