--- a/64.tex
+++ b/64.tex
@@ -1,5 +1,8 @@
-\begin{samepage}
 \def\no{64}
+\def\theintegral{\(\int\cos^2{u}\;\dif{u}
+\enspace=\enspace%
+\tfrac{1}{2}\,{u}\;+\;\tfrac{1}{4}\,\sin{2{u}}\;+\;C\)}
+
 % \def\aroundarrows{\mspace{18mu}}
 % \def\andsoarrow{\Rightarrow}
 \begin{align*}
@@ -15,14 +18,3 @@
    +\tfrac{1}{4} \sin{2{u}} + C
 \\
 \end{align*}
-
-
-\footeqn{\no}{
-\int\cos^2{u}\;\dif{u}
-\enspace=\enspace%
-\tfrac{1}{2}\,{u}\;+\;\tfrac{1}{4}\,\sin{2{u}}\;+\;C
-}
-%
-
-\end{samepage}
-\columnbreak%
