--- a/65.tex
+++ b/65.tex
@@ -1,5 +1,8 @@
-\begin{samepage}
 \def\no{65}
+\def\theintegral{\(\int\tan^2{u}\;\dif{u}
+\enspace=\enspace%
+\tan{u}\;-\;u\;+\;C\)}
+
 % \def\aroundarrows{\mspace{18mu}}
 % \def\andsoarrow{\Rightarrow}
 \begin{align*}
@@ -13,12 +16,3 @@
 \\
 =&  \tan u - u + C
 \end{align*}
-%
-\footeqn{\no}{
-\int\tan^2{u}\;\dif{u}
-\enspace=\enspace%
-\tan{u}\;-\;u\;+\;C
-}
-%
-\end{samepage}
-\columnbreak%
