--- a/71.tex
+++ b/71.tex
@@ -1,5 +1,10 @@
-\begin{samepage}
 \def\no{71}
+\def\theintegral{\(\int\sec^3{u}\,\dif{u}
+\,=\,
+\frac{1}{2}\sec{u}\,\tan{u}
++\frac{1}{2}\ln\abs{\sec{u}+\tan{u}}+C
+\)}
+
 % \def\aroundarrows{\mspace{18mu}}
 % \def\andsoarrow{\Rightarrow}
 \begin{align*}
@@ -28,13 +33,3 @@
 %
 \end{align*}
 %
-%
-\footeqn{\no}{
-\int\sec^3{u}\,\dif{u}
-\,=\,
-\frac{1}{2}\sec{u}\,\tan{u}
-+\frac{1}{2}\ln\abs{\sec{u}+\tan{u}}+C
-}
-%
-\end{samepage}
-\columnbreak%
