--- a/92.tex
+++ b/92.tex
@@ -1,5 +1,11 @@
-\begin{samepage}
 \def\no{92}
+\def\theintegral{\(
+\int{u\,\arctan{u}}\;\dif{u}
+\enspace=\enspace%
+\frac{u^2+1}{2}\,\arctan{u}
+\;-\;\frac{u}{2}\;+\;C
+\)}
+
 % \def\aroundarrows{\mspace{18mu}}
 % \def\andsoarrow{\Rightarrow}
 \begin{align*}
@@ -19,13 +25,3 @@
   - \frac{u}{2} + C \\
 \end{align*}
 
-
-\footeqn{\no}{
-\int{u\,\arctan{u}}\;\dif{u}
-\enspace=\enspace%
-\frac{u^2+1}{2}\,\arctan{u}
-\;-\;\frac{u}{2}\;+\;C
-}
-%
-
-\end{samepage}
