--- a/96.tex
+++ b/96.tex
@@ -1,5 +1,8 @@
-\begin{samepage}
 \def\no{96}
+\def\theintegral{\(\int{ue^{au}}\;\dif{u}%
+\enspace=\enspace%
+\frac{1}{a^2}{\left(au-1\right)}e^{au}\;+\;C\)}
+
 \begin{align*}
 %
 {I}_{\no}
@@ -24,13 +27,3 @@
 =&  \frac{1}{a^2}\left(au-1\right)e^{au} + C
 %
 \end{align*}
-
-
-\footeqn{\no}{
-\int{ue^{au}}\;\dif{u}%
-\enspace=\enspace%
-\frac{1}{a^2}{\left(au-1\right)}e^{au}\;+\;C
-}
-%
-
-\end{samepage}
