--- a/97.tex
+++ b/97.tex
@@ -1,5 +1,8 @@
-\begin{samepage}
 \def\no{97}
+\def\theintegral{\(\int{ue^{au}}\;\dif{u}%
+\enspace=\enspace%
+\frac{1}{a^2}{\left(au-1\right)}e^{au}\;+\;C\)}
+
 \begin{align*}
 %
 {I}_{\no}
@@ -25,12 +28,3 @@
 %
 \end{align*}
 
-
-\footeqn{\no}{
-\int{ue^{au}}\;\dif{u}%
-\enspace=\enspace%
-\frac{1}{a^2}{\left(au-1\right)}e^{au}\;+\;C
-}
-%
-
-\end{samepage}
