--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -1,38 +1,29 @@
 \documentclass[12pt]{calcexam}
 \begin{document}
-\begin{multicols*}{2}
+% \begin{multicols*}{2}
 % todo: use twocolumn article option
 
-\input{12}
-\input{13}
-\input{14}
-\input{1-11}
+\input{1-11}\clearpage
+\input{12}\clearpage
+\input{13}\clearpage
+\input{14}\clearpage
 %
-\input{16}
-\input{17}
-\input{18}
-\input{15}
+\input{15}\clearpage
+\input{16}\clearpage
+\input{17}\clearpage
+\input{18}\clearpage
 %
-\input{20}
-\input{21}
-\clearpage%
-This page is intentionally blank.\columnbreak%
-\input{19}
+\input{19}\clearpage
+\input{20}\clearpage
+\input{21}\clearpage
+\input{63}\clearpage
 %
-\input{64}
-\input{65}
-{\def\side{L}\input{71}}
-\input{63}
+\input{64}\clearpage
+\input{65}\clearpage
+\input{71}\clearpage
+\input{92}\clearpage
 %
-\input{96}
-{\def\side{R}\input{100}}
-\input{102}
-{\def\side{R}\input{92}}
-%
-
-\clearpage
-% \vspace{30pc}%force a blank page
-%
-%
-\end{multicols*}
+\input{96}\clearpage
+\input{100}\clearpage
+\input{102}\clearpage
 \end{document}
