--- a/16.tex
+++ b/16.tex
@@ -1,5 +1,9 @@
-\begin{samepage}
 \def\no{16}
+\def\theintegral{\(
+\int{\frac{1}{\sqrt{a^2-u^2}}}\;\dif{u}
+\enspace=\enspace%
+\arcsin{\frac{u}{a}}\;+\;C
+\)}
 % \def\aroundarrows{\mspace{18mu}}
 % \def\andsoarrow{\Rightarrow}
 \begin{align*}
@@ -24,13 +28,3 @@
 ]
 =&  \arcsin{\frac{u}{a}} + C
 \end{align*}
-
-
-\footeqn{\no}{
-\int{\frac{1}{\sqrt{a^2-u^2}}}\;\dif{u}
-\enspace=\enspace%
-\arcsin{\frac{u}{a}}\;+\;C
-}
-%
-
-\end{samepage}
