Fix math errors

--- a/14.tex
+++ b/14.tex
@@ -15,7 +15,7 @@ I_{14}
             v = \sec{u} + \tan{u}
 \andso \dif{v}=&\sec^2{u} + \sec{u}\tan{u}\dif{u}
 ]
-  =& \int \frac{1}{v}
+  =& \int \frac{\dif v}{v}
 \\=& \ln \abs{v} + C
 \nb\unsub
   =& \ln \abs{\sec{u} + \tan{u}} + C
