--- a/15.tex
+++ b/15.tex
@@ -1,25 +1,23 @@
 \def\no{15}
 \def\theintegral{\(
-    \int  \csc u \dif u = - \ln\abs{ \csc u + \cot u } + C
+    \int  \csc u \dif u = \ln\abs{ \csc u - \cot u } + C
 \)}
 
 \begin{align*}
 I_{15}
 =&  \int  \csc{u} \dif u \\
-=&  \int  \csc{u} \cdot \frac{ \csc{u} + \cot{u} }
-                             { \csc{u} + \cot{u} }
+=&  \int  \csc{u} \cdot \frac{ \csc{u} - \cot{u} }
+                             { \csc{u} - \cot{u} }
     \dif u \\
-=&  \int  \frac{ \csc^2{u} + \csc{u} \cdot \cot{u}}
-               { \csc{u}   + \cot{u} }
+=&  \int  \frac{ \csc^2{u} - \csc{u} \cdot \cot{u}}
+               { \csc{u}   - \cot{u} }
     \dif u
 \nb{\sub}[\quad
-                 v  =   \csc{u}   + \cot{u}
-    \andso  \dif{v} =& -\csc^2{u} + \csc{u}\cot{u}\dif{u} \\
-    \andso -\dif{v} =&  \csc^2{u} + \csc{u}\cot{u}\dif{u}
+                 v  =   \csc{u}   - \cot{u}
+    \andso  \dif{v} =&  \csc^2{u} - \csc{u}\cot{u}\dif{u}
 ]
-=&  \int  \frac{ -\dif v }{ v } \\
-=& -\int  \frac{1}{v}  \dif v   \\
-=& -\ln \abs{v} + C
+=&  \int  \frac{ \dif v }{ v } \\
+=& \ln \abs{v} + C
 \nb\unsub
-=& -\ln \abs{ \csc u + \cot u } + C
+=& \ln \abs{ \csc u - \cot u } + C
 \end{align*}
