--- a/21.tex
+++ b/21.tex
@@ -14,7 +14,7 @@
 =&  \int \sqrt{ a^2 + u ^2 } \dif u
 \nb{\sub\sohcahtoa[\quad][4ex]{u}{a}{\sqrt{ a^2 + u ^2 }}\\}[
   \rule{0pt}{4ex}\text{and so}\quad u = a\tan\theta
-  \andso  &\dif{u}=a\sec\theta\tan\theta\dif\theta \qquad\\
+  \andso  &\dif{u}=a\sec\theta\tan\theta\dif\theta \qquad \\
   \quad\text{ and }\quad \sqrt{u^2+a^2}& = a\sec\theta ]
 % \int \sqrt{ a^2 + u ^2 } \dif u
 =&  a\sec\theta a\sec^2\theta \dif\theta
@@ -54,7 +54,7 @@
 \\%[-0.5em]
 =&  \frac{u}{2}\sqrt{u^2+a^2}
   + \frac{a^2}{2}  \ln\abs{u+\sqrt{u^2+a^2}}
-  + \frac{a^2}{2}  \ln\abs{a}
+  - \frac{a^2}{2}  \ln\abs{a}
   + C
 \\
 =&  \frac{u}{2}\sqrt{u^2+a^2}
