--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -20,7 +20,12 @@
 %
 \input{64}\clearpage
 \input{65}\clearpage
+\input{66}\clearpage
 \input{71}\clearpage
+%
+\input{72}\clearpage
+\input{82}\clearpage
+\input{83}\clearpage
 \input{92}\clearpage
 %
 \input{96}\clearpage
