--- a/20.tex
+++ b/20.tex
@@ -1,5 +1,5 @@
 \def\no{20}
-\def\theintegral{\(\int{\frac{ 1 }{ u^2-a^2 } \dif{u}}%
+\def\theintegral{\(\int{\frac{ 1 }{ u^2-a^2 } }\dif{u}%
 =\frac{1}{2a} { \ln\abs{ \frac{u-a}{ u+a } } }+C\)}
 
 % \def\aroundarrows{\mspace{18mu}}
