--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -1,35 +1,41 @@
 \documentclass[12pt]{calcexam}
+\usepackage[12pt]{moresize}
+
+\newcommand\addIntegral[1]{\input{#1}\clearpage}
+
 \begin{document}
 % \begin{multicols*}{2}
 % todo: use twocolumn article option
 
 \input{1-11}\clearpage
-\input{12}\clearpage
-\input{13}\clearpage
-\input{14}\clearpage
+\addIntegral{12}
+\addIntegral{13}
+\addIntegral{14}
 %
-\input{15}\clearpage
-\input{16}\clearpage
-\input{17}\clearpage
-\input{18}\clearpage
+\addIntegral{15}
+\addIntegral{16}
+\addIntegral{17}
+\addIntegral{18}
 %
-\input{19}\clearpage
-\input{20}\clearpage
-\input{21}\clearpage
-\input{63}\clearpage
+\addIntegral{19}
+\addIntegral{20}
+\addIntegral{21}
+\addIntegral{63}
 %
-\input{64}\clearpage
-\input{65}\clearpage
-\input{66}\clearpage
-\input{71}\clearpage
+\addIntegral{64}
+\addIntegral{65}
+\addIntegral{66}
+\addIntegral{71}
 %
-\input{72}\clearpage
-\input{82}\clearpage
-\input{83}\clearpage
-\input{92}\clearpage
+\addIntegral{72}
+\addIntegral{82}
+\addIntegral{83}
+\addIntegral{92}
 %
-\input{96}\clearpage
-\input{100}\clearpage
-\input{102}\clearpage
-\input{copyright}
+\addIntegral{96}
+\addIntegral{100}
+\addIntegral{102}
+\pagestyle{empty}%
+\input{index}%
+\input{copyright}%
 \end{document}
