--- a/19.tex
+++ b/19.tex
@@ -1,5 +1,5 @@
 \def\no{19}
-\def\theintegral{\(\int{\frac{ 1 }{ a^2-u^2 } \dif{u}}%
+\def\theintegral{\(\int{\frac{ 1 }{ a^2-u^2 }}\;\dif{u}%
 =\frac{1}{2a} { \ln\abs{ \frac{u+a}{u-a} } }+C\)}
 
 % \def\aroundarrows{\mspace{18mu}}
