--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -8,33 +8,39 @@
 % todo: use twocolumn article option
 
 \input{1-11}\clearpage
+\blankpage*%
 \addIntegral{12}
 \addIntegral{13}
-\addIntegral{14}
 %
+\addIntegral{14}
 \addIntegral{15}
 \addIntegral{16}
 \addIntegral{17}
-\addIntegral{18}
 %
+\addIntegral{18}
 \addIntegral{19}
 \addIntegral{20}
 \addIntegral{21}
-\addIntegral{63}
 %
+\addIntegral{63}
 \addIntegral{64}
 \addIntegral{65}
 \addIntegral{66}
-\addIntegral{71}
 %
+\addIntegral{71}
 \addIntegral{72}
+\addIntegral{73}
+\addIntegral{74}
+%
 \addIntegral{82}
 \addIntegral{83}
 \addIntegral{92}
-%
 \addIntegral{96}
+%
 \addIntegral{100}
 \addIntegral{102}
+\blankpage*%
+% back cover
 \pagestyle{empty}%
 \input{index}%
 \input{copyright}%
