--- a/booklet-of-integrals.tex
+++ b/booklet-of-integrals.tex
@@ -8,7 +8,7 @@
 nup=2x1,%
 % noautoscale,%
 % frame,%
-signature=20,% number of pages
+signature=28,% multiple of 4
 landscape,%
 ]{build/book-of-integrals.pdf}
 
