--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -1,44 +1,50 @@
 \documentclass[12pt]{calcexam}
-\usepackage[12pt]{moresize}
-
-\newcommand\addIntegral[1]{\input{#1}\clearpage}
 
 \begin{document}
-% \begin{multicols*}{2}
-% todo: use twocolumn article option
-
+% if input is wrapped in a macro
+% latex-workshow will lose track of sub-files
 \input{1-11}\clearpage
 \blankpage*%
-\addIntegral{12}
-\addIntegral{13}
+\input{12}\clearpage
+\input{13}\clearpage
 %
-\addIntegral{14}
-\addIntegral{15}
-\addIntegral{16}
-\addIntegral{17}
+\input{14}\clearpage
+\input{15}\clearpage
+\input{16}\clearpage
+\input{17}\clearpage
 %
-\addIntegral{18}
-\addIntegral{19}
-\addIntegral{20}
-\addIntegral{21}
+\input{18}\clearpage
+\input{19}\clearpage
+\input{20}\clearpage
+\input{21}\clearpage
 %
-\addIntegral{63}
-\addIntegral{64}
-\addIntegral{65}
-\addIntegral{66}
+\input{63}\clearpage
+\input{64}\clearpage
+\input{65}\clearpage
+\input{66}\clearpage
 %
-\addIntegral{71}
-\addIntegral{72}
-\addIntegral{73}
-\addIntegral{74}
+\input{67}\clearpage
+\input{68}\clearpage
+\input{69}\clearpage
+\input{70}\clearpage
 %
-\addIntegral{82}
-\addIntegral{83}
-\addIntegral{92}
-\addIntegral{96}
+\input{71}\clearpage
+\input{72}\clearpage
+\input{73}\clearpage
+\input{74}\clearpage
 %
-\addIntegral{100}
-\addIntegral{102}
+\input{82}\clearpage
+\input{83}\clearpage
+\input{92}\clearpage
+\input{96}\clearpage
+%
+\input{97}\clearpage
+\input{100}\clearpage
+\input{102}\clearpage
+\blankpage%
+%
+\blankpage%
+\blankpage%
 \blankpage*%
 % back cover
 \pagestyle{empty}%
