--- a/97.tex
+++ b/97.tex
@@ -1,30 +1,17 @@
 \def\no{97}
-\def\theintegral{\(\int{ue^{au}}\;\dif{u}%
+\def\theintegral{\(\int{u^{n}e^{au}}\;\dif{u}%
 \enspace=\enspace%
-\frac{1}{a^2}{\left(au-1\right)}e^{au}\;+\;C\)}
-
+\frac{1}{a}u^{n}e^{au}\,-\,\frac{n}{a}\int u^{n-1}e^{au}\;\dif{u}\)}
 \begin{align*}
 %
 {I}_{\no}
-=&  \int u e^{au} \dif u
+=&  \int{u^{n}e^{au}} \dif u
 \parts*
-{u}{1}
+{u^n}{n\cdot u^{n-1}}
 {e^{au}}{\frac{e^{au}}{a}}
 \\
-=&  \frac{1}{a}ue^{au}
-  - \frac{1}{a} \int e^{au} \dif u
-\\
-=&  \frac{1}{a}ue^{au}
-  - \frac{1}{a^2}e^{au} + C
-\\
-=&  \left(
-      \frac{1}{a}u
-    - \frac{1}{a^2}
-    \right) e^{au} + C
-\nb{\simplify}
-%
-%
-=&  \frac{1}{a^2}\left(au-1\right)e^{au} + C
+=&  \frac{1}{a}u^{n}e^{au}
+  - \frac{n}{a}\int u^{n-1}e^{au}\;\dif{u}%
 %
 \end{align*}
 
