--- a/74.tex
+++ b/74.tex
@@ -11,7 +11,7 @@
 \begin{align*}
 % \renewcommand{\baselinestretch}{2}
 {I}_{\no}
-=&  \int\sin^n{u}\dif{u}
+=&  \int\cos^n{u}\dif{u}
 \parts*
   { \cos^{n-1}u} {  -(n-1)\cos^{n-2}{u}\sin{u}  }%
   { \cos u  }     {  \sin u  } \\
