--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -33,14 +33,19 @@
 \input{73}\clearpage
 \input{74}\clearpage
 %
+\input{75}\clearpage
+\input{76}\clearpage
+\input{77}\clearpage
 \input{82}\clearpage
+%
 \input{83}\clearpage
 \input{92}\clearpage
 \input{96}\clearpage
-%
 \input{97}\clearpage
+%
 \input{100}\clearpage
 \input{102}\clearpage
+\blankpage%
 \blankpage%
 %
 \blankpage%
