--- a/integral-list.tex
+++ b/integral-list.tex
@@ -12,12 +12,21 @@
 \listintegral{64}{\cos^2{u}}
 \listintegral{65}{\tan^2{u}}
 \listintegral{66}{\cot^2{u}}
+\listintegral{67}{\sin^3{u}}
+\listintegral{68}{\cos^3{u}}
+\listintegral{69}{\tan^3{u}}
+\listintegral{70}{\cot^3{u}}
 \listintegral{71}{\sec^3{u}}
 \listintegral{72}{\csc^3{u}}
+\listintegral{73}{\sin^n{u}}
+\listintegral{74}{\cos^n{u}}
+\listintegral{75}{\tan^n{u}}
+\listintegral{76}{\cot^n{u}}
+\listintegral{77}{\sec^n{u}}
 \listintegral{82}{ {u}\sin{u}}
 \listintegral{83}{ {u}\cos{u}}
 \listintegral{92}{{u\,\arctan{u}}}
 \listintegral{96}{{ue^{au}}}
-\listintegral{97}{{ue^{au}}}
+\listintegral{97}{{u^{n}e^{au}}}
 \listintegral{100}{{\ln{u}}}
 \listintegral{102}{{\frac{1}{u\ln{u}}}}
