Refresh index, copyright, and readme

--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -4,7 +4,7 @@
 % if input is wrapped in a macro
 % latex-workshow will lose track of sub-files
 \input{1-11}\clearpage
-\blankpage*%
+\input{copyright}\clearpage
 \input{12}\clearpage
 \input{13}\clearpage
 %
@@ -45,14 +45,6 @@
 %
 \input{100}\clearpage
 \input{102}\clearpage
-\blankpage%
-\blankpage%
-%
-\blankpage%
-\blankpage%
 \blankpage*%
-% back cover
-\pagestyle{empty}%
-\input{index}%
-\input{copyright}%
+\pagestyle{empty}\input{index}%
 \end{document}
