--- a/copyright.tex
+++ b/copyright.tex
@@ -1,12 +1,14 @@
+\pagestyle{empty}
 \newcommand\cclogo[1]{%
 \includegraphics[width=1.333em]{cc-logos/#1.pdf}%
 }
 \null\vfill
 \begin{center}
+The Book of Integrals\\
 \begin{footnotesize}
-Copyright 2021 Erik Ben Heckman\\%
+\url{https://github.com/heckman/book-of-integrals}\\[1ex]%
 Some Rights Reserved\\[1ex]%
 \cclogo{cc} \cclogo{by} \cclogo{nc} \cclogo{sa}\\[-0.5ex]%
-\texttt{https://creativecommons.org/licenses/by-nc-sa/4.0/}
+\url{https://creativecommons.org/licenses/by-nc-sa/4.0/}
 \end{footnotesize}
 \end{center}
