Add notice for I-16 and I-17

--- a/16.tex
+++ b/16.tex
@@ -28,3 +28,8 @@
 ]
 =&  \arcsin{\frac{u}{a}} + C
 \end{align*}
+
+{\vfill\small\centering
+If \(a=1\) this solution can be used with explanation.
+\par\bigskip\bigskip}
+
