--- a/17.tex
+++ b/17.tex
@@ -20,3 +20,7 @@
   =&  \,\frac{1}{a}\,\arctan{\frac{u}{a}} + C
 \end{align*}
 
+{\vfill\small\centering
+If \(a=1\) this solution can be used with explanation.
+\par\bigskip\bigskip}
+
