--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 % if input is wrapped in a macro
-% latex-workshow will lose track of sub-files
+% latex-workshop will lose track of sub-files
 \input{1-11}\clearpage
 {\pagestyle{empty}\input{copyright}\clearpage}
 \input{12}\clearpage
