Remove footer from back cover

--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -4,10 +4,11 @@
 % if input is wrapped in a macro
 % latex-workshop will lose track of sub-files
 % \input{1-11}\clearpage
-{\pagestyle{empty}
-  \input{cover}\clearpage
-  \input{given}\clearpage
-}
+\pagestyle{empty}
+\input{cover}\clearpage
+\input{given}\clearpage
+
+\pagestyle{fancy}
 \input{12}\clearpage
 \input{13}\clearpage
 %
@@ -48,8 +49,9 @@
 %
 \input{100}\clearpage
 \input{102}\clearpage
-{\pagestyle{empty}
-  \input{index}\clearpage
-  \input{copyright}
-}
+
+\pagestyle{empty}
+\input{index}\clearpage
+\input{copyright}
+
 \end{document}
