--- a/77.tex
+++ b/77.tex
@@ -23,7 +23,9 @@
 \end{align*}
 \begin{align*}
 (1+(n-2))\int\sec^n{u}\dif{u}
-=& \tan u\,\sec^{n-2}u-(n-2)\int\sec^{n-2}\dif u \\
+=& \tan u\,\sec^{n-2}u
+  +(n-2)\int\sec^{n-2}\dif u \\
 \int\sec^n{u}\dif{u}
-=& \frac{1}{n-1}\tan u\,\sec^{n-2}u-\frac{n-2}{n-1}\int\sec^{n-2}\dif u \\
+=& \frac{1}{n-1}\tan u\,\sec^{n-2}u
+  +\frac{n-2}{n-1}\int\sec^{n-2}\dif u \\
 \end{align*}
