--- a/book-of-integrals.tex
+++ b/book-of-integrals.tex
@@ -1,57 +1,62 @@
 \documentclass[12pt]{calcexam}
 
-\begin{document}
+\begin{document}%
 % if input is wrapped in a macro
 % latex-workshop will lose track of sub-files
 % \input{1-11}\clearpage
+\pagestyle{empty}%
+\input{cover}\clearpage%
+\input{given}\clearpage%
+%
+\pagestyle{fancy}%
+\input{12}\clearpage%
+\input{13}\clearpage%
+%
+\input{14}\clearpage%
+\input{15}\clearpage%
+\input{16}\clearpage%
+\input{17}\clearpage%
+%
+\input{18}\clearpage%
+\input{19}\clearpage%
+\input{20}\clearpage%
+\input{21}\clearpage%
+%
+\input{63}\clearpage%
+\input{64}\clearpage%
+\input{65}\clearpage%
+\input{66}\clearpage%
+%
+\input{67}\clearpage%
+\input{68}\clearpage%
+\input{69}\clearpage%
+\input{70}\clearpage%
+%
+\input{71}\clearpage%
+\input{72}\clearpage%
+\input{73}\clearpage%
+\input{74}\clearpage%
+%
+\input{75}\clearpage%
+\input{76}\clearpage%
+\input{77}\clearpage%
+\input{78}\clearpage%
+%
+\input{82}\clearpage%
+\input{83}\clearpage%
+\input{92}\clearpage%
+\input{96}\clearpage%
+%
+\input{97}\clearpage%
+\input{100}\clearpage%
+\input{102}\clearpage%
+\blankpage%
+%
+\blankpage%
+\blankpage%
+%
 \pagestyle{empty}
-\input{cover}\clearpage
-\input{given}\clearpage
-
-\pagestyle{fancy}
-\input{12}\clearpage
-\input{13}\clearpage
+\input{index}\clearpage%
+\input{copyright}%
 %
-\input{14}\clearpage
-\input{15}\clearpage
-\input{16}\clearpage
-\input{17}\clearpage
-%
-\input{18}\clearpage
-\input{19}\clearpage
-\input{20}\clearpage
-\input{21}\clearpage
-%
-\input{63}\clearpage
-\input{64}\clearpage
-\input{65}\clearpage
-\input{66}\clearpage
-%
-\input{67}\clearpage
-\input{68}\clearpage
-\input{69}\clearpage
-\input{70}\clearpage
-%
-\input{71}\clearpage
-\input{72}\clearpage
-\input{73}\clearpage
-\input{74}\clearpage
-%
-\input{75}\clearpage
-\input{76}\clearpage
-\input{77}\clearpage
-\input{82}\clearpage
-%
-\input{83}\clearpage
-\input{92}\clearpage
-\input{96}\clearpage
-\input{97}\clearpage
-%
-\input{100}\clearpage
-\input{102}\clearpage
-
-\pagestyle{empty}
-\input{index}\clearpage
-\input{copyright}
-
 \end{document}
