--- a/integral-list.tex
+++ b/integral-list.tex
@@ -23,6 +23,7 @@
 \listintegral{75}{\tan^n{u}}
 \listintegral{76}{\cot^n{u}}
 \listintegral{77}{\sec^n{u}}
+\listintegral{78}{\csc^n{u}}
 \listintegral{82}{ {u}\sin{u}}
 \listintegral{83}{ {u}\cos{u}}
 \listintegral{92}{{u\,\arctan{u}}}
